[package]
name = "seesaw"
version = "0.1.0"
edition = "2021"

[dependencies]
prettyplease = "0.2.25"
proc-macro2 = { version = "1.0.92", default-features = false }
quote = { version = "1.0.37", default-features = false }
regex = "1.11.1"
syn = { version = "2.0.90", features = [
    "full",
    "parsing",
    "printing",
    "clone-impls",
    "visit",
], default-features = false }
seesaw-macros = { version = "=0.1.0", path = "macros" }

[dev-dependencies]
bindgen = "0.70.1"
expect-test = "1.5.0"

[workspace]
members = ["macros"]
