[package]
name = "seesaw"
version = "0.1.0"
edition = "2021"

[features]
default = ["build", "macros"]
build = [
    "dep:prettyplease",
    "dep:proc-macro2",
    "dep:quote",
    "dep:regex",
    "dep:syn",
]
macros = ["dep:seesaw-macros"]

[dependencies]
prettyplease = { version = "0.2.25", optional = true }
proc-macro2 = { version = "1.0.92", default-features = false, optional = true }
quote = { version = "1.0.37", default-features = false, optional = true }
regex = { version = "1.11.1", optional = true }
syn = { version = "2.0.90", features = [
    "full",
    "parsing",
    "printing",
    "clone-impls",
    "visit",
], default-features = false, optional = true }
seesaw-macros = { version = "=0.1.0", path = "macros", optional = true }

[dev-dependencies]
bindgen = "0.70.1"
expect-test = "1.5.0"

[workspace]
members = ["macros", "examples/yakshaver"]
