[package]
name = "seesaw"
version = "0.1.3"
edition = "2021"
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["*", "!/target", "examples/*"]

[features]
default = ["build", "macros", "std"]
build = [
    "dep:prettyplease",
    "dep:proc-macro2",
    "dep:quote",
    "dep:regex",
    "dep:syn",
    "std",
]
std = []
macros = ["dep:seesaw-macros"]

[dependencies]
prettyplease = { version = "0.2.25", optional = true }
proc-macro2 = { version = "1.0.92", default-features = false, optional = true }
quote = { version = "1.0.37", default-features = false, optional = true }
regex = { version = "1.11.1", optional = true }
syn = { version = "2.0.90", features = [
    "full",
    "parsing",
    "printing",
    "clone-impls",
    "visit",
], default-features = false, optional = true }
seesaw-macros = { version = "=0.1.3", path = "macros", optional = true }

[dev-dependencies]
bindgen = "0.71.0"
expect-test = "1.5.0"

[workspace]
members = ["macros", "examples/yakshaver"]

[workspace.package]
authors = ["Aatif Syed <0xaatif@gmail.com>"]
homepage = "https://crates.io/crates/seesaw"
documentation = "https://docs.rs/seesaw"
repository = "https://github.com/aatifsyed/seesaw"
license = "Apache-2.0 OR MIT"
description = "generate traits from C header files"
keywords = ["ffi", "bindgen", "bindings"]
categories = [
    "rust-patterns",
    "no-std::no-alloc",
    "external-ffi-bindings",
    "embedded",
    "development-tools::ffi",
]
