[package]
name = "seesaw-cli"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
seesaw = { version = "0.1.5", path = "../" }

[[bin]]
name = "seesaw"
path = "main.rs"

[dev-dependencies]
clap-doc = "0.1.1"
expect-test = "1.5.0"
